--- a/面试.md
+++ b/面试.md
@@ -1,6 +1,6 @@
 ## 网络相关
 
-## 1. tcp为什么可靠？
+## 1. tcp为什么可靠？(p6)
 1. 三次握手
 2.  报文重传
     - 每个数据包都需要进行确认，如果计时器到期了还未收到，需要重传
@@ -9,14 +9,14 @@
 4. 拥塞控制
       - 会根据网络的情况来动态的调整发送数据包的大小
 
-## 2. http1.1的缺点
+## 2. http1.1的缺点(p6)
 1. 队头阻塞
    - 如果有一个响应阻塞了，那么后续的响应都会阻塞在这。
 2. 速度慢
     - 因为tcp的拥塞窗口机制，导致最大数据包发送的限制
 3. 消息头部太大
 
-### 3. http缓存有哪些，区别是什么
+### 3. http缓存有哪些，区别是什么(p5)
 1. 强缓存
    - 通过Cache-control来控制，可以设置Max-age，no-cache，no-store，must-revalidate，public，private
 2. 协商缓存
@@ -32,7 +32,7 @@
 但是etag需要消耗服务器的资源，并且在分布式的机器上会产生不同算法导致缓存失效的问题，
 根据具体的情况来具体选择。
 
-### 4. http2有哪些特点
+### 4. http2有哪些特点(p6)
 1. 信道复用
     - 减少tcp握手, SSL握手,以及滑动窗口慢启动
     - 多路复用能大幅提高传输效率，不用等待上一个请求的响应
@@ -44,10 +44,10 @@
     - 静态索引表用来记录常见的头比如 method: get
     - 动态索引表来记录自定义头
 
-### 5. https是什么？
+### 5. https是什么？(p5)
 https是在tcp和http协议层之间加了一层tls/ssl协议层
 
-### 6. https的工作流程是什么？
+### 6. https的工作流程是什么？(p6)
 1. 客户端和服务端首先分别生成1个随机数，并且服务端给客户端发送数字证书和公钥，
 2. 客户端用数字证书对公钥进行校验以后，用公钥来加密客户端第二个随机数发送给服务端，
 3. 服务端通过私钥解密，然后各种用加密算法把两个客户端随机数和一个服务端随机数加密生成预主秘钥
@@ -55,17 +55,17 @@ https是在tcp和http协议层之间加了一层tls/ssl协议层
 
 
 ## 算法
-1. 遍历tree
+### 1. 遍历tree (p6)
 递归和迭代
-2. 二分查找
-3. 排序
-4. 去重
+### 2. 二分查找 (p5)
+### 3. 排序 (p5)
+### 4. 去重 (p5)
 
-5. 节流，防抖
+### 5. 节流，防抖 (p5)
 
-6. deepclone
+### 6. deepclon (p5)
 
-7. compose
+### 7. compose (p6)
 ```js
 connect()(
     React.mome(
@@ -80,7 +80,7 @@ compose(
 )(MyComponent)
 ```
 
-8. curry
+### 8. curry (p6)
 ```js
 var abc = function(a, b) {
   return [a, b];
@@ -89,7 +89,7 @@ var abc = function(a, b) {
 curry(abc)(1)(2) // [1, 2];
 ```
 ## ES
-1. 迭代器是什么？有哪些数据接口部署了迭代器？
+### 1. 迭代器是什么？有哪些数据接口部署了迭代器？(p5)
 - 它是一种接口，为各种不同的数据结构提供统一的访问机制
 - 以下实现了迭代器接口
    - Array
@@ -101,11 +101,11 @@ curry(abc)(1)(2) // [1, 2];
    - NodeList 对象
    - 其他任何实现了Symbol.iterator的属性的对象
 
-2. Map和对象的主要区别是什么？
+### 2. Map和对象的主要区别是什么？（p5）
 - 键值可以存入引用类型
 
 ### Vue
-1. 虚拟dom原理
+### 1. 虚拟dom原理 (p6)
 - 通过JavaScript对象来模拟dom节点，并且通过diff算法来进行增量更新对象，同时映射到dom节点上
 ```js
 function Vnode(sel, data, children, text, elm) {
@@ -116,23 +116,23 @@ function Vnode(sel, data, children, text, elm) {
 createElement()
 ```
 
-2. key的作用
+### 2. key的作用 (p6)
 - 在diff算法的时候，用来进行两个节点的对比需要的属性之一，可以用来复用节点
 
-3. 双向绑定原理
+### 3. 双向绑定原理 (p5)
 - getter setter
 
-4. vue.nextTick解决了什么问题？
+### 4. vue.nextTick解决了什么问题？(p6)
 - 防止数据更新后来马上导致页面进行无效的渲染。
 
-5. 实现Vue中eventEmit
+### 5. 实现Vue中eventEmit (p5)
 - on，once，off，emit
 
-6. 为什么Vue中对数组.length的操作无法同步到视图，但是通过数据的方法操作却可以
+### 6. 为什么Vue中对数组.length的操作无法同步到视图，但是通过数据的方法操作却可以 (p6)
  - 因为vue的响应式是通过Object.defineProperty来实现的，但是数组的length属性是不能添加getter和setter，所有无法通过观察length来判断。
  - vue对改变数据长度的方法进行了重写，其中手动进行了依赖收集和消息触发
 
-7. 为什么可以通过this.xx访问到data中的属性
+### 7. 为什么可以通过this.xx访问到data中的属性 (p6)
  - 通过Object.defineProperty来代理到vm上
 ```js
 export function proxy (target: Object, sourceKey: string, key: string) {
@@ -146,10 +146,10 @@ export function proxy (target: Object, sourceKey: string, key: string) {
 }
 ```
 ### React
-1. 有哪些复用代码的方法？
+### 1. 有哪些复用代码的方法？(p5)
 mixin hoc renderProp hooks
 
-2. 如何做性能优化
+### 2. 如何做性能优化 (p6)
 - shouldComponentUpdate 
 - React.PureComponent
 - React.memo
@@ -157,7 +157,7 @@ mixin hoc renderProp hooks
 - 对props进行记忆
 - 正确的使用key
 
-3. 有哪些生命周期
+### 3. 有哪些生命周期 (p5)
 - 初始化
     1. constructor()
     2. static getDerivedStateFromProps()
@@ -178,9 +178,9 @@ mixin hoc renderProp hooks
     1. static getDerivedStateFromError()
     2. componentDidCatch()
 
-4. state，props context变化是否会导致rerender
+### 4. state，props context变化是否会导致rerender (p6)
 
-### Webpack优化
+### Webpack优化 (p6)
 1. 通过dll构建公共包例如react redux
 2. 通过new webpack.optimize.CommonsChunkPlugin提取公共代码，例如工具包,antd
 3. 使用import() 进行懒加载
@@ -192,9 +192,9 @@ mixin hoc renderProp hooks
 
 
 ### DOM
-1. event target和currentTarget区别
+### 1. event target和currentTarget区别 (p5)
  - event.target返回触发事件的元素
  - event.currentTarget返回绑定事件的元素
 
-2. 如何获得节点样式
+### 2. 如何获得节点样式 (p5)
  - getComputedStyle
